- Added amend files to remove the requirement for the toxic tradition and toxic mentors from requiring the Twisted Way.
- Resolved an issue with character sheets not properly showing programs connected to a piece of cyberware. 
- Reverted shapeshifter metatypes improperly flagging metatype qualities as shapeshifter or metahuman forms only.

Changed/new strings:
- Checkbox_Options_UnclampAttributeMinimum
- String_ExpenseJoinNetwork
- Checkbox_NetworkSubmersion
- Checkbox_JoinedNetwork
- Checkbox_GroupInitiation
- Checkbox_InitiationOrdeal
- Checkbox_InitiationSchooling
- Checkbox_NetworkSubmersion
- Checkbox_SubmersionTask
- Checkbox_Expense_ForceCareerVisible
- LimitCondition_ExcludeIntimidation
- LimitCondition_ExcludeFansGangers
- LimitCondition_SportsFans
- LimitCondition_ShieldPhysicalPenalty
- LimitCondition_ExcludeIntimidationVisible
- LimitCondition_ClimbingTests
- LimitCondition_GangVisible
- LimitCondition_PublicVisible
- LimitCondition_Megacorp
- LimitCondition_Sprawl
- LimitCondition_Visible
- LimitCondition_NationalLanguageRanks
- LimitCondition_BunkerGearVisible
- LimitCondition_AttribAGI
- LimitCondition_SkillsKnowledgeAcademic 
- LimitCondition_SkillsActiveContortion
- LimitCondition_SkillsActiveDisguiseImpersonation
- LimitCondition_SkillsActiveEscapeArtistGrappleLoose
- LimitCondition_SkillsActiveEscapeArtist
- LimitCondition_SkillsActiveFirstAidMedicine
- LimitCondition_CyberwareBalanceTail
- LimitCondition_SkillsActiveGymnasticsClimbing
- LimitCondition_CyberwareHydraulicJacks
- LimitCondition_IntimidationVisible
- LimitCondition_Intimidation
- LimitCondition_SkillsActiveNavigation
- LimitCondition_SkillsActivePerceptionHearing
- LimitCondition_SkillsActivePerceptionVisual
- LimitCondition_SkillsActivePerceptionSpatialRecognizer
- LimitCondition_SkillsActivePerception
- LimitCondition_SkillsActivePerformanceSinging
- LimitCondition_SkillsActivePerformanceSynthtrument
- LimitCondition_SkillsActivePerformance