@@ -47,6 +47,7 @@ Data Changes:
 - Added amend files to remove the requirement for the toxic tradition and toxic mentors from requiring the Twisted Way.
 - Resolved an issue with character sheets not properly showing programs connected to a piece of cyberware. 
 - Reverted shapeshifter metatypes improperly flagging metatype qualities as shapeshifter or metahuman forms only.
+- Fixed an incorrect bonus for the Mystic Guardian mentor that caused it to provide incorrect bonus types.
 
 Changed/new strings:
 - Checkbox_Options_UnclampAttributeMinimum
